--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "joi": "^17.10.0",
     "vue": "^3.3.4",
     "vue-router": "^4.0.13"
   },
